test/langtools/tools/javac/superInit/SuperInitBad16.out
SuperInitBad16.java:11:9: compiler.err.cant.ref.before.ctor.called: hashCode()
1 error
